[package]
authors = ["callym"]
description = "Some vaguely useful proc-macros"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "deride"
repository = "https://github.com/callym/deride"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
